Sun Jun 24 17:51:49 EDT 2007
	* tracker_voice.cpp(add_to_mix_buffer): Added use of the GMP
	library. It turns out that even the small amount of fixed-point
	math used here may cause an integer overflow. On 32-bit systems,
	it is possible to simply use 64-bit integers, so #ifdefs were put
	in to that effect. Systems with sizeof(size_t) == sizeof(Uint64)
	need GMP.

	* SConstruct, detect,py: Updated to detect the need for GMP.

Sun Jun 24 02:12:38 EDT 2007 J Phelps <godless@users.sf.net>
	* tracker_voice.cpp(add_to_mix_buffer)
	  sample_data_fixedpoint.h(fixedpoint_loop)
	  sample_data.h: Moved the code that does looping
	  from add_to_mix_buffer to fixedpoint_loop, a new
	  function.
	  
Sat Jun 23 22:38:25 EDT 2007 J Phelps <godless@users.sf.net>
	* resampler_linear.cpp
	  resampler_cosine.cpp
	  resampler_cubic.cpp
	  resampler_raw.cpp: Rewrote the resamplers. They now
	all use the code in resampler_kernel.cpp, which eliminates
	much of the code duplication.
Sat Jun 23 03:51:59 EDT 2007 J Phelps <godless@users.sf.net>
	* tracker_voice.h: Removed unused definition for
	Tracker_Voice::FRACTIONAL.
	* tracker_voice.cpp: Reintroduced SOME of the fixed-point math.

	Removed the variable "debug_int", which was being used to
	trace a memory error (which turned out to be caused by
	improper data sharing between threads).

	* typedefs.h: Macro WARN() does not use ANSI color sequences
	unless ANSI_COLORS is defined.
	* resampler_manager.cpp (get_resampler): Replaced NULL return
	value with an exception-throw, since the NULL return value is
	never checked for.

	New behavior: get_resampler(-1) is equivalent to
	get_resampler(get_default_resampler()), because this is how
	it's used.

	Added "signed" to the parameter type of p_index to show
	that it really _is_ supposed to be signed.
	* resampler_instance.h (set_current_resampler): Replaced use of
	ERROR macro with an exception-throw.
	* resampler_instance.h (mix): Simplified the initialization